# api/api.py
@@ -12,53 +12,61 @@ def get_category_list() -> list:
     
 def get_repos() -> list:
     return pmc.get_repos()
+
+def get_pkgs(pageNumber:float) -> list:
+    pkgs = pmc.get_pkgs(pageNumber)
+    pkgListRt = []
+    for x in range(len(pkgs)):
+        pkgListRt.append(get_package_details_json(pkgs[x]))
+    return pkgListRt
     
 def search_flatpaks(pkgName: str) -> list:
     pkgs = pmc.search_flatpaks(pkgName)
-    pkgNames = []
+    pkgListRt = []
     for x in range(len(pkgs)):
-        pkgNames.append(pkgs[x].get_name())
-    return pkgNames
+        pkgListRt.append(get_package_details_json(pkgs[x]))
+    return pkgListRt
 
 def search_snaps(pkgName: str) -> list:
     pkgs = pmc.search_snaps(pkgName)
-    pkgNames = []
+    pkgListRt = []
     for x in range(len(pkgs)):
-        pkgNames.append(pkgs[x].get_name())
-    return pkgNames
+        pkgListRt.append(get_package_details_json(pkgs[x]))
+    return pkgListRt
 
 def search_pkgs(pkgName: str) -> list:
     pkgs = pmc.search_pkgs(pkgName)
-    pkgNames = []
+    pkgListRt = []
     for x in range(len(pkgs)):
-        data = {}
-        data['app_id'] = pkgs[x].get_app_id()
-        data['app_name'] = pkgs[x].get_app_name()
-        data['build_date'] = pkgs[x].get_build_date().format ("%x") 
-        data['desc']=pkgs[x].get_desc()
-        data['download_size']=pkgs[x].get_download_size()
-        data['files']=pkgs[x].get_files()
-        data['groups']=pkgs[x].get_groups()
-        data['has_signature']=pkgs[x].get_has_signature()
-        data['icon']=pkgs[x].get_icon()
-        data['id']=pkgs[x].get_id()
-        data['license']=pkgs[x].get_license()
-        data['long_desc']=pkgs[x].get_long_desc()
-        data['makedepends']=pkgs[x].get_makedepends()
-        data['name']=pkgs[x].get_name()
-        data['optdepends']=pkgs[x].get_optdepends()
-        data['optionalfor']=pkgs[x].get_optionalfor()
-        data['packager']=pkgs[x].get_packager()
-        data['provides']=pkgs[x].get_provides()
-        data['repo']=pkgs[x].get_repo()
-        data['requiredby']=pkgs[x].get_requiredby()
-        data['screenshots']=pkgs[x].get_screenshots()
-        data['url']=pkgs[x].get_url()
-        data['version']=pkgs[x].get_version()
-        pkgNames.append(data)
-        
-    return pkgNames
+        pkgListRt.append(get_package_details_json(pkgs[x]))
+    return pkgListRt
 
+def get_package_details_json(pkg) -> str:
+    data = {}
+    data['app_id'] = pkg.get_app_id()
+    data['app_name'] = pkg.get_app_name()
+    data['build_date'] = pkg.get_build_date().format ("%x") 
+    data['desc']=pkg.get_desc()
+    data['download_size']=pkg.get_download_size()
+    data['files']=pkg.get_files()
+    data['groups']=pkg.get_groups()
+    data['has_signature']=pkg.get_has_signature()
+    data['icon']=pkg.get_icon()
+    data['id']=pkg.get_id()
+    data['license']=pkg.get_license()
+    data['long_desc']=pkg.get_long_desc()
+    data['makedepends']=pkg.get_makedepends()
+    data['name']=pkg.get_name()
+    data['optdepends']=pkg.get_optdepends()
+    data['optionalfor']=pkg.get_optionalfor()
+    data['packager']=pkg.get_packager()
+    data['provides']=pkg.get_provides()
+    data['repo']=pkg.get_repo()
+    data['requiredby']=pkg.get_requiredby()
+    data['screenshots']=pkg.get_screenshots()
+    data['url']=pkg.get_url()
+    data['version']=pkg.get_version()
+    return data
 
 if __name__ == '__main__':
     app = connexion.FlaskApp(__name__, port=9090, specification_dir='swagger/')
